--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin-top: 10vh;
 }
 .master > :first-child {
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
 }
 
 .row {
@@ -11,19 +11,23 @@
   max-width: 960px;
 }
 
-.modal-button {
+button.modal-button {
   margin-top: 3vh;
-  max-width: 80px;
-}
-
-button.add {
   width: 80px;
 }
-
-#status-button {
+button#status-button {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 55px;
   height: 30px;
+}
+
+#github {
+  height: 1.5rem;
+  width: auto;
+}
+
+footer {
+  height: 3.5rem;
 }/*# sourceMappingURL=style.css.map */
