--- a/style.scss
+++ b/style.scss
@@ -22,9 +22,17 @@ button {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 55px;
+        width: 65px;
         height: 30px;
     }
+
+    &#remove-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80px;
+        height: 30px;
+    }    
 }
 
 #github {
