--- a/style.css
+++ b/style.css
@@ -12,22 +12,21 @@
 }
 
 button.modal-button {
-  margin-top: 3vh;
+  margin-top: 2.5rem;
   width: 80px;
+}
+button#status-button, button#remove-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  font-size: 0.75rem;
 }
 button#status-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 65px;
-  height: 30px;
+  width: 4rem;
 }
 button#remove-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80px;
-  height: 30px;
+  width: 5rem;
 }
 
 #github {
@@ -37,4 +36,8 @@ button#remove-button {
 
 footer {
   height: 3.5rem;
+}
+
+.hide-element {
+  display: none;
 }/*# sourceMappingURL=style.css.map */
