--- a/style.css
+++ b/style.css
@@ -29,15 +29,20 @@ button#remove-button {
   width: 5rem;
 }
 
-#github {
-  height: 1.5rem;
-  width: auto;
-}
-
 footer {
   height: 3.5rem;
 }
 
 .hide-element {
   display: none;
+}
+
+#github {
+  height: 1.8rem;
+  width: auto;
+  transition: 0.3s;
+}
+
+#github:hover {
+  transform: scale(1.1);
 }/*# sourceMappingURL=style.css.map */
